--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8080:8080"
     environment:
       RECEPTIONAPI_PORT: ":8080"
+      RECEPTIONAPI_: ":8080"
     depends_on:
       - rabbitmq
 
