--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: ServicesBuild
+name: Services
 
 on:
   push:
@@ -10,7 +10,6 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -29,9 +28,11 @@ jobs:
       working-directory: ./services
       run: make build-dispatcher-api
 
-    - name: Linter
+    - name: Install and run golangci-lint
       working-directory: ./services
-      run: go test -race -v ./...
+      run:
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GOPATH/bin v1.59.1
+        golangci-lint run
 
     - name: Test
       working-directory: ./services
