--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -31,9 +31,10 @@ jobs:
     - name: Install and run golangci-lint
       working-directory: ./services
       run:
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GOPATH/bin v1.59.1
+        export PATH=$HOME/bin:$PATH
+        mkdir -p $HOME/bin
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3  # Use the version you need
         golangci-lint run
-
     - name: Test
       working-directory: ./services
       run: golangci-lint run ./...
