--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Linter
       working-directory: ./services
-      run:
+      run: |
         export PATH=$HOME/bin:$PATH
         mkdir -p $HOME/bin
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3  # Use the version you need
