--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -34,8 +34,8 @@ jobs:
         export PATH=$HOME/bin:$PATH
         mkdir -p $HOME/bin
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3  # Use the version you need
-        golangci-lint run --path-prefix ./services
+        golangci-lint run ./...
 
     - name: Test
       working-directory: ./services
-      run: golangci-lint run ./...
+      run: go test -race -v ./...
