--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         export PATH=$HOME/bin:$PATH
         mkdir -p $HOME/bin
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3  # Use the version you need
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3
         golangci-lint run ./...
 
     - name: Test
