--- a/.github/workflows/services-build.yml
+++ b/.github/workflows/services-build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Services
+name: ServicesBuild
 
 on:
   push:
@@ -39,3 +39,4 @@ jobs:
     - name: Test
       working-directory: ./services
       run: go test -race -v ./...
+
