--- a/.github/workflows/services-build.yml
+++ b/.github/workflows/services-build.yml
@@ -28,13 +28,13 @@ jobs:
       working-directory: ./services
       run: make build-dispatcher-api
 
-    - name: Linter
-      working-directory: ./services
-      run: |
-        export PATH=$HOME/bin:$PATH
-        mkdir -p $HOME/bin
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3
-        golangci-lint run ./...
+#    - name: Linter
+#      working-directory: ./services
+#      run: |
+#        export PATH=$HOME/bin:$PATH
+#        mkdir -p $HOME/bin
+#        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.53.3
+#        golangci-lint run ./...
 
     - name: Test
       working-directory: ./services
