--- a/.github/workflows/dispatcher-image.yml
+++ b/.github/workflows/dispatcher-image.yml
@@ -1,4 +1,4 @@
-name: Dispatcher Image
+name: DispatcherImage
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
       packages: write
       attestations: write
       id-token: write
-      #
+
     steps:
         - name: Checkout repository
           uses: actions/checkout@v4
@@ -42,10 +42,10 @@ jobs:
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
 
-        * name: Generate artifact attestation
-            uses: actions/attest-build-provenance@v1
-            with:
-              subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-              subject-digest: ${{ steps.push.outputs.digest }}
-              push-to-registry: true
+        - name: Artifact
+          uses: actions/attest-build-provenance@v1
+          with:
+            subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+            subject-digest: ${{ steps.push.outputs.digest }}
+            push-to-registry: true
 
